--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "javascript-bridge",
   "version": "1.0.0",
+  "type": "module",
   "description": "우아한테크코스 프리코스 다리 건너기 게임 미션",
   "dependencies": {
-    "@woowacourse/mission-utils": "^1.0.6"
+    "@woowacourse/mission-utils": "2.1.1"
   },
   "devDependencies": {
     "jest": "^29.0.3"
